--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,2 @@
-appdirs==1.4.3
-appnope==0.1.0
-beautifulsoup4==4.5.3
-click==6.7
-decorator==4.0.11
-defusedxml==0.5.0
-enum34==1.1.6
-Flask==0.12.2
-html5lib==0.999999999
-httplib2==0.10.3
-ipython==5.3.0
-ipython-genutils==0.2.0
-itsdangerous==0.24
-Jinja2==2.9.5
-jira==1.0.10
-MarkupSafe==0.23
-nfldb==0.2.17
-nflgame==1.2.20
-numpy==1.13.0
-oauthlib==2.0.1
-packaging==16.8
-pbr==1.10.0
-pexpect==4.2.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.13
-psycopg2==2.6.2
-ptyprocess==0.5.1
-Pygments==2.2.0
-pyparsing==2.2.0
-pytz==2017.2
-requests==2.13.0
-requests-oauthlib==0.8.0
-requests-toolbelt==0.7.1
-simplegeneric==0.8.1
+python-dateutil==2.6.1
 six==1.10.0
-traitlets==4.3.2
-virtualenv==15.0.2
-wcwidth==0.1.7
-webencodings==0.5
-Werkzeug==0.12.2
